<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">




    <ImageButton
        android:id="@+id/P_backbtn"
        android:layout_width="37dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/transparent"
        android:padding="20dp"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/booking_form_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="121dp"
        android:layout_marginTop="-40dp"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.02"
        android:text="@string/bookingform_board"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/chnagelangbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="30dp"
        android:textSize="11sp"
        android:text="@string/button_lang"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="-50dp"
        app:cardUseCompatPadding="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/datepicker_testbook"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="sans-serif"

            android:gravity="center"
            android:padding="1dp"
            android:text="Pick Date"
            android:textColor="@color/black"
            android:visibility="invisible" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dateview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/date_picker"
            android:textColor="@color/black" />
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/linearlayoutphonefname"
        android:layout_width="353dp"
        android:layout_height="82dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="*"
                android:textColor="@color/red">

            </com.google.android.material.textview.MaterialTextView>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/f_Phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:hint="@string/phone_number"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:errorEnabled="true"
            app:prefixText="+91">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:inputType="number"
                android:maxLength="10"
                android:textSize="12sp" />


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"

            >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10sp"
                android:text="*"
                android:textColor="@color/red">

            </com.google.android.material.textview.MaterialTextView>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/f_fname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-15dp"
            android:layout_weight="1"

            android:hint="@string/first_name"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="355dp"
        android:layout_height="85dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">


        <RelativeLayout
            android:layout_width="7dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-23dp"
            android:layout_marginLeft="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="*"

                android:textColor="@color/red">

            </com.google.android.material.textview.MaterialTextView>

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/f_lname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-1dp"
            android:layout_weight="1"

            android:hint="@string/last_name"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_baseline_error_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="150dp"
                android:layout_height="57dp"

                android:inputType="text"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/genderspinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:gravity="center"
            tools:ignore="SpeakableTextPresentCheck" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/f_height"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            android:hint="@string/height"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:errorEnabled="true"
            app:boxCornerRadiusTopStart="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/f_weight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"

            android:hint="@string/weight"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:errorEnabled="true"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/f_age"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            android:hint="@string/Age"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:errorEnabled="true"

            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>





    </LinearLayout>

    <View
        android:id="@+id/divider6"
        android:layout_width="260dp"
        android:layout_height="3dp"
        android:layout_marginLeft="85dp"



        android:background="?android:attr/listDivider"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="-9dp"
        android:fontFamily="sans-serif"

        android:text="@string/Address"
        android:textColor="@color/black"
        android:textSize="12sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/f_Landmark"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"

        android:hint="@string/Landmark_Street"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/f_city"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:hint="@string/City_Town"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:errorEnabled="true"
            app:boxCornerRadiusTopStart="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/f_pin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"

            android:hint="@string/Pin_Code"
            app:errorEnabled="true"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:maxLength="6"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout191"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/f_state"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"

            android:hint="@string/State"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:errorEnabled="true"
            app:boxCornerRadiusTopStart="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/f_Country"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"

            android:hint="@string/Country"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:errorEnabled="true"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLength="6"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/testbookings_nextbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/orange1"
        android:enabled="false"
        android:padding="15dp"
        android:text="Next"
        android:hint="@string/phone_number"
        android:textAlignment="center"
        app:cornerRadius="25dp"
        app:rippleColor="@color/orange1" />








</LinearLayout>